--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: bottom_progress
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/iseruuuuu/bottom_progress
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
